--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Portfolio</title>
-  <link rel="stylesheet" href="Portfolio.css">
-  <link rel="stylesheet" href="common.css">
+  <link rel="stylesheet" href="index.css">
 
 </head>
 
