--- a/index.html
+++ b/index.html
@@ -77,6 +77,9 @@
             <li>
               사용자 데이터를 받고 출력해주는 기능 전담
             </li>
+            <li>
+              데이터베이스 안의 책 정보를 가져와 메인페이지 출력 및 해당 책 페이지로의 이동 구현
+            </li>
           </ul>
         </div>
       </section>
